fix horizontal overflow on small screens

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Chakra Petch', sans-serif;
@@ -147,11 +151,17 @@ canvas {
 }
 
 main {
-  padding: 2rem;
+  padding: 0.75rem;
   display: flex;
   justify-content: center;
   background-color: var(--main-bg);
   backdrop-filter: blur(1rem);
+}
+
+@media (min-width: 768px) {
+  main {
+    padding: 2rem;
+  }
 }
 
 #content {
@@ -218,6 +228,7 @@ main {
 .project-badges {
   display: flex;
   gap: 0.5em;
+  flex-wrap: wrap;
 }
 
 ul {
